--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="30">
         <tr>
             <td>
-                <img src="D:\MOOC COURSE\WEB DEVELOPMENT\web development\formal_photo_final_for_cv-removebg-preview-modified.png" alt="profile picture" height="200" width="200">
+                <img src="formal_photo_final_for_cv-removebg-preview-modified.png" alt="profile picture" height="200" width="200">
             </td>
             <td>
                 <h1>JUBILANT K.J</h1>
@@ -37,7 +37,7 @@
             </tr>
         </thead>
         <tr>
-            <td>2022-Current</td><td>Lovely Proffessional University</td>
+            <td>2022-Current</td><td>Lovely Professional University</td>
             <td>Current</td>
         </tr>
         <tr>
